syntax = "proto3";

option csharp_namespace = "AnimalHealth.Application.Models";

import "Protos/organization.proto";
import "Protos/user.proto";

service AuthProto {
  rpc Authorize(UserLoginModel) returns (RoleModel);
}

message RoleModel {
  int32 id = 1;
  UserModel user = 2;
}